# bitchat-clone

./: .env  .gitignore  CMakeLists.txt  README.md  cli  daemon  tui_bitchat.py
.github/workflows/: build-release.yml  ci.yml  release.yml
cmake/: toolchain-aarch64.cmake
doc/: design_doc.md
include/app/: chat_service.hpp
include/crypto/: psk_aead.hpp
include/ctl/: ipc.hpp
include/proto/: ctrl.hpp  frag.hpp
include/transport/: bluez_dbus_util.hpp  bluez_helper_central.hpp  bluez_helper_peripheral.hpp  bluez_transport.hpp  bluez_transport_impl.hpp  itransport.hpp  loopback_transport.hpp
include/util/: constants.hpp  exitcodes.hpp  log.hpp
src/app/: chat_service.cpp
src/cli/: main.cpp
src/crypto/: psk_aead.cpp
src/ctl/: ipc.cpp
src/daemon/: main.cpp
src/proto/: frag.cpp
src/transport/: bluez_helper.inc  bluez_helper_central.cpp  bluez_helper_peripheral.cpp  bluez_transport.cpp  bluez_transport_central.cpp  bluez_transport_peripheral.cpp  loopback_transport.cpp
tests/: test_aead.cpp  test_aead_session.cpp  test_chat.cpp  test_cli.cpp  test_env.cpp  test_frag.cpp  test_ipc.cpp  test_loopback.cpp  test_tui_log.cpp
